force-app/main/default/objects/ADM_Column_History__c/ADM_Column_History__c.object-meta.xml
<CustomObject>
    <label>Column History</label>
    <nameField>
        <displayFormat>CH-{0000000000}</displayFormat>
        <label>Column History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Column History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>