force-app/main/default/objects/ADM_Column_History__c/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Column</label>
    <referenceTo>ADM_Column__c</referenceTo>
    <relationshipLabel>Column History</relationshipLabel>
    <relationshipName>Column_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>