force-app/main/default/objects/ADM_Column_History__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration with 4 precision points. Here integer part is number of days and fractional part can be converted into hours by multiplying by 24.</description>
    <formula>IF( ISBLANK(Time_Left__c) , NOW() , Time_Left__c)  -  Time_Entered__c</formula>
    <label>Duration</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>