force-app/main/default/objects/ADM_Column_History__c/fields/Time_Entered__c.field-meta.xml
<CustomField>
    <fullName>Time_Entered__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>The timestamp for when a work record enters a column</description>
    <label>Time Entered</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>