force-app/main/default/objects/ADM_Column_History__c/fields/Time_Left__c.field-meta.xml
<CustomField>
    <fullName>Time_Left__c</fullName>
    <description>The time stamp for when a work record left a column (and be empty if the work record is still present).</description>
    <label>Time Left</label>
    <type>DateTime</type>
</CustomField>