force-app/main/default/objects/ADM_Column_History__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Column History</relationshipLabel>
    <relationshipName>Column_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>